--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2266ae4c-4954-4906-ab1c-072c340bfcc2"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
